--- a/src/index_car.html
+++ b/src/index_car.html
@@ -683,6 +683,34 @@
         </div>
       </section>
 
+      <section class="why-autoselection">
+        <div class="container why-autoselection__container">
+          <h2 class="why-autoselection__title">
+            Почему автоподбор <span>Mini Cooper</span> востребованная услуга!?
+          </h2>
+
+          <div class="why-autoselection__text">
+            <p>
+              Задумали покупку, автомобиля Mini? Хотите знать почему эта марка так популярна среди автолюбителей,
+              которые выбирают качественные ,британские автомобили,которые так любят в нашей стране, и почему
+              будущие владельцы обращаются в автоподбор за помощью. Mini - очень интересная машина, в нашей
+              стране, эта марка, пользуется спросом у определенного числа автолюбителей.
+            </p>
+
+            <p>
+              Mini специализируется на выпуске малогабаритных, но, в то же время мощных автомобилей. Такие модели
+              как: Mini Cooper, Countryman, Clubman, Cabrio, Pace, Roadster, Paceman - хорошие и качественные
+              автомобили, но, в Российских реалиях, найти достойный экземпляр не так то легко, если Вы не обладаете
+              техническими и юридическими знаниями, то это, становится большой проблемой для потенциального
+              покупателя. Самые популярные моменты, которые наблюдаются при подборе автомобиля марки Мини,
+              это сокрытие юридической чистоты, утаивание от баз данных ДТП, скрученные пробеги, перебитые
+              номера. Из всего перечисленного, одним из самых страшных моментов, является сокрытие информации
+              о дтп, кузове автомобиля, его геометрии, и системы безопасности.
+            </p>
+          </div>
+        </div>
+      </section>
+
       <section class="stages">
         <div class="container stages__container">
           <h2 class="title stages__title" data-aos="zoom-in-up">
